2020-04-23 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_item.c Replace switch case with if/else.
      Compound last conditional in geda_menu_item_position_menu.

2020-04-22 Wiley E. Hill <wileyhill@gmail.com>

    * src/dialogs/geda_image_chooser.c: Remove conditional directives
      for popup_tips and add else directive in build_menu and utilize
      gtk_widget_set_tooltip_text to set the tooltip text when Gtk>2.

    * src/widgets/geda_menu_button.c: Eliminate unneeded GObject cast
      in geda_menu_button_get_property. Revise geda_menu_button_set_
      arrow_tooltip to compile using gtk_widget_set_tooltip_text when
      when Gtk>2.

2020-04-21 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_button_focus_on_click
          * geda_get_button_label_text
          * geda_get_button_use_stock
          * geda_get_button_use_underline

    * src/widgets/geda_menu_button.c: Replace dynamic cast with static cast
      in geda_menu_button_set_property. Utilize macros:

          * geda_get_button_focus_on_click
          * geda_get_button_label_text
          * geda_get_button_use_stock
          * geda_get_button_use_underline

2020-04-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu.c: Refactor conditionals in geda_menu_enter_notify
      to eliminate redundant check for GedaMenu.

    * src/widgets/geda_menu_bar.c: Replace GTK_WIDGET_TOPLEVEL with function
      gtk_widget_is_toplevel in geda_menu_bar_button_press. Utilize macros:

          * geda_get_widget_allocation
          * geda_get_widget_style
          * geda_get_widget_window

    * src/widgets/geda_menu_item.c: Replace gtk_container_get_border_width
      with geda_get_container_border_width.

2020-04-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_menu_bar.c: Reduce the scope of variables in
      geda_menu_bar_size_allocate. Replace gtk_container_get_border_width